css/style.css
/* =====================
    リセット
===================== */
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

a {
	text-decoration: none;
	color: inherit;
}

img {
	display: block;
}

/* =====================
    共通設定
===================== */
html,
body {
	margin: 0;
	padding: 0;
	height: 100%;
	background: #000;
	overflow-y: auto;
}

body {
	transition: opacity 0.3s ease;
}

.background {
	position: fixed;
	inset: 0;
	z-index: 0;
	object-fit: cover;
}

.page {
	position: relative;
	z-index: 1;
}

